# verilog-fmt

./: .gitignore  Cargo.toml  README.md
verible-fmt-cli/: Cargo.toml
verible-fmt-cli/src/: main.rs
verible-fmt-core/: Cargo.toml
verible-fmt-core/src/: formatter.rs  lib.rs  parser.rs
verilog-fmt/: Cargo.toml
